# rts_client

./: README.md
app/: app-release.apk  build.gradle
app/src/androidTest/java/com/xrrjkj/translator/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/libspeex/: lsp.c
app/src/main/java/com/xrrjkj/translator/cloud/: ActivityManager.java  AudioRawData.java  AudioRecorderRunnable.java  AudioUtils.java  ControlThread.java  FileUtils.java  MainActivity.java  ProcessSpeexRunnable.java  RTMP.java  RTMPRunnable.java  SharedPreferencesUtils.java  Speex.java  XrApplication.java
app/src/main/java/com/xrrjkj/translator/cloud/activity/: BaseFragmentActivity.java  ChangePwdActivity.java  CircleImageView.java  ForgetPwdActivity.java  GroupChatActivity.java  HomeActivity.java  JoinGroupChatActivity.java  LanguageListActivity.java  LoginActivity.java  MaterialDialog.java  PersonalCenterActivity.java  RegisterActivity.java  RoomChooseListActivity.java  SettingActivity.java  SingleChatActivity.java  StartActivity.java
app/src/main/java/com/xrrjkj/translator/cloud/adapter/: GroupChatListAdapter.java  LanguageListAdapter.java  RoomListAdapter.java  SingleChatListAdapter.java
app/src/main/java/com/xrrjkj/translator/cloud/bean/: ChatInfo.java  RoomInfo.java
app/src/main/java/com/xrrjkj/translator/cloud/function/: UserController.java
app/src/main/java/com/xrrjkj/translator/cloud/speex/: AudioFileWriter.java  FileWriter.java
app/src/main/jni/rtmp/: CMakeLists.txt  com_xrrjkj_translator_cloud_RTMP.cpp
app/src/main/jni/speex/: CMakeLists.txt  speex.cpp
app/src/main/res/anim/: fab_anim.xml
app/src/main/res/drawable/: btn_bg_blue.xml  btn_bg_chat_green.xml  btn_bg_chat_white.xml  btn_bg_gray.xml  btn_bg_white.xml  btn_bg_white2.xml  shap_bg_gray.xml  shap_btn_blue_bg.xml  start_page_bg.xml
app/src/main/res/layout/: activity_change_pwd.xml  activity_create_group_chat.xml  activity_forget_pwd.xml  activity_group_chat.xml  activity_homepage.xml  activity_join_group_chat.xml  activity_language_list.xml  activity_login.xml  activity_personal_center.xml  activity_register.xml  activity_setting.xml  activity_single_chat.xml  activity_start.xml  content_scrolling.xml  layout_material_dialog.xml  list_group_chat_item.xml  list_language_item.xml  list_room_item.xml  list_single_chat_item.xml  view_join_room.xml  view_title_bar.xml
app/src/main/res/values/: colors.xml  dimens.xml  languages.xml  strings.xml  styles.xml
app/src/main/res/values-w820dp/: attrs.xml
app/src/test/java/com/xrrjkj/translator/: ExampleUnitTest.java
common/rtmp/: com_xrrjkj_translator_cloud_RTMP.h
gradle/wrapper/: gradle-wrapper.properties
